--- a/freeCodeCamp/html5/Revision.html
+++ b/freeCodeCamp/html5/Revision.html
@@ -11,7 +11,10 @@
     <div style="background-image: url('StockSnap_DTGQQKPUPR.jpg');">
         
         <i><b>courtsey of https://stocksnap.io</b></i>
-
+        <p><b>Internal Links</b> are connected to within sections of different pieces </p>
+        <p>
+         <b> <i>Nested Anchors:</i> </b> View more <a href="http://freecatphotoapp.com">cat photos</a>
+              </p>
     </div>
 </body>
 </html>
